# nomnomnow

customers/: README.md  pyproject.toml
customers/src/customers/: __init__.py  customers.db
gateway/: README.md  pyproject.toml
gateway/src/gateway/: __init__.py
orders/: README.md  pyproject.toml
orders/src/orders/: __init__.py  log_config.py  orders.db
products/: README.md  pyproject.toml
products/src/products/: __init__.py  products.db
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: app.css  app.html
ui/src/components/: Spinner.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/driver-app/: +page.svelte
ui/src/routes/order-app/: +page.svelte
ui/src/routes/restaurant-app/: +page.svelte
ui/src/stores/: loading.js
