[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Cully Wakelin", email = "cully.wakelin@resonatehq.io" }
]
dependencies = [
    "resonate-sdk==0.4.8",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "types-flask-cors>=5.0.0.20240902",
    "colorlog>=6.9.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
    "gateway" = "gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
